SERVER-9130: missing files and fix for lastError reset on isMaster